Fixed horizontal scrolling issue

--- a/the-restaurant-vue/src/assets/main.css
+++ b/the-restaurant-vue/src/assets/main.css
@@ -29,13 +29,3 @@ h1, h2, h3, h4, h5, .navbar-brand, .btn{
     text-transform: uppercase;
     letter-spacing: 1px;
 }
-
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    line-height: 60px;
-    white-space: nowrap;
-    background-color: #f8f9fa;
-}
